css/80_app.css
/* ... */
.more-fields input {
    margin-left: 10px;
    flex: 1 1 auto;
}
.ideditor[dir='rtl'] .more-fields input {
    margin-left: auto;
    margin-right: 10px;
}

.form-field-input-wrap .label {
    background: #f6f6f6;
    padding: 5px 10px;
}


/* Raw Tag Editor
------------------------------------------------------- */
.raw-tag-options {
    display: flex;
    flex-flow: row nowrap;
    justify-content: flex-end;
    margin-top: -28px;
}
button.raw-tag-option {
    flex: 0 0 auto;
    padding: 3px;
    background: #aaa;
    color: #eee;
    margin: 0 3px;
}
button.raw-tag-option:focus,
button.raw-tag-option.active {
    color: #fff;
    background: #597be7;
}
@media (hover: hover) {
    button.raw-tag-option:hover {
        color: #fff;
        background: #597be7;
    }
}
button.raw-tag-option.selected {
    color: #fff;
    background: #7092ff;
}
button.raw-tag-option svg.icon {
    width: 14px;
    height: 14px;
    display: block;
}
.ideditor[dir='ltr'] button.raw-tag-option-list {
    transform: scaleX(-1);
    filter: FlipH;
    -ms-filter: "FlipH";
}


.tag-text {
    width: 100%;
    height: 100%;
    min-height: 32px;
    font-family: monospace;
    white-space: pre;
}
.tag-text::-webkit-scrollbar-thumb:hover { 
    cursor: auto;
}

.tag-text,
.tag-list {
    margin-top: 10px;
}
.tag-row {
    width: 100%;
    position: relative;
}
.tag-row .inner-wrap {
    display: flex;
    flex-flow: row nowrap;
    width: 100%;
    position: relative;
}
.tag-row .key-wrap,
.tag-row .value-wrap {
    flex: 1 1 50%;
}

.tag-text.readonly,
.tag-row.readonly,
.tag-row.readonly input.key,
.tag-row.readonly input.value,
.tag-row.readonly button.remove {
    color: #777;
    background-color: #eee;
    cursor: not-allowed;
}

.tag-row input {
    border: 0;
    border-radius: 0;
    border-bottom: 1px solid #ccc;
    border-left: 1px solid #ccc;
    width: 100%;
}
.ideditor[dir='rtl'] .tag-row input {
    border-left: none;
    border-right: 1px solid #ccc;
}


.tag-row input.key {
    font-weight: bold;
    background-color: #f6f6f6;
}

.tag-row input.value {
    border-right: 1px solid #ccc;
}
.ideditor[dir='rtl'] .tag-row input.value {
    border-left: 1px solid #ccc;
}

.tag-row:first-child input.key {
    border-top: 1px solid #ccc;
    border-top-left-radius: 4px;
}
.ideditor[dir='rtl'] .tag-row:first-child input.key {
    border-top-left-radius: 0;
    border-top-right-radius: 4px;
}

.tag-row:first-child input.value {
    border-top: 1px solid #ccc;
}
.tag-row button {
    flex: 0 0 auto;
    width: 32px;
    border: 1px solid #ccc;
    border-top-width: 0;
    border-left-width: 0;
}
.ideditor[dir='rtl'] .tag-row button {
    border-left-width: 1px;
    border-right-width: 0;
}

.tag-row button:active,
.tag-row button:focus {
    background: #f1f1f1;
}
@media (hover: hover) {
    .tag-row button:hover {
        background: #f1f1f1;
    }
}
.tag-row button .icon {
    opacity: .5;
}
.tag-row:first-child button {
    border-top-width: 1px;
}

.tag-row:first-child .tag-reference-button {
    border-top-right-radius: 4px;
}
.ideditor[dir='rtl'] .tag-row:first-child .tag-reference-button {
    border-top-left-radius: 4px;
    border-top-right-radius: 0;
}

.tag-row:last-child .tag-reference-button {
    border-bottom-right-radius: 4px;
}
.ideditor[dir='rtl'] .tag-row:last-child .tag-reference-button {
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 0;
}

.tag-row .tag-reference-button {
    border-radius: 0;
}
.ideditor[dir='rtl'] .tag-row .tag-reference-button {
    border-left-width: 1px;
    border-right-width: 0;
}

/* Tag reference */
.tag-reference-loading {
    background-color: #f5f5f5;
}
.tag-reference-loading .icon {
    background-image: url(img/mini-loader.gif);
    background-position: 0 0;
}

.tag-reference-body {
    flex: 1 1 auto;
    width: 100%;
    overflow: hidden;
    display: none;
    padding-top: 10px;
}
.tag-reference-body.expanded {
    padding-bottom: 10px;
    padding-left: 10px;
    display: block;
}
.ideditor[dir='rtl'] .tag-reference-body.expanded {
    padding-left: 0;
    padding-right: 10px;
}
.tag-reference-link {
    display: block;
}
.tag-reference-link .icon:first-child {
    margin-left: 0;
}

img.tag-reference-wiki-image {
    float: right;
    width: 33.3333%;
    border-radius: 4px;
    margin: 0 0 0 5px;
}
.ideditor[dir='rtl'] img.tag-reference-wiki-image {
    float: left;
    margin: 0 5px 0 0;
}

.preset-list .tag-reference-body {
    position: relative;
    width: 100%;
}
.raw-tag-editor .tag-reference-body {
    width: 100%;
}
.raw-tag-editor .tag-row.readonly .tag-reference-body {
    background: #f6f6f6;
    color: #333;
}
.raw-tag-editor .tag-row:not(:last-child) .tag-reference-body.expanded {
    border-bottom: 1px solid #ccc;
}
.raw-tag-editor .tag-row.readonly .tag-reference-body.expanded {
    border-top: 1px solid #ccc;
}


/* Raw Member / Membership Editor
------------------------------------------------------- */
.section-raw-member-editor .member-list:empty,
.section-raw-membership-editor .member-list:empty {
    display: none;
}

.section-raw-member-editor .member-list,
.section-raw-membership-editor .member-list {
    position: relative; /* required for drag-and-drop */
    padding-top: 5px;
}
.section-raw-member-editor .member-list li,
.section-raw-membership-editor .member-list li {
    position: relative;
    border-radius: 4px;
    margin: 0;
    padding-bottom: 10px;
}
.section-raw-member-editor .member-row .member-entity-name,
.section-raw-membership-editor .member-row .member-entity-name {
    font-weight: normal;
    padding-left: 10px;
}
/* ... */

